chore: SonarQube cleanup.